--- a/package.json
+++ b/package.json
@@ -17,18 +17,26 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "md5": "^2.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.3",
+    "sqlite3": "^5.1.6",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/md5": "^2.3.2"
   }
 }
