--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "react-toastify": "^9.1.3",
     "sqlite3": "^5.1.6",
     "typescript": "5.0.4",
